Second attempt Overflow Issue

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   border: 2px;
   max-width: 700px;
   width: 100%;
-  margin: auto;
+  margin: calc(80% - 1rem);
   height: 50vh;
   display: flex;
   align-items:center;
@@ -42,6 +42,7 @@
   margin-bottom: auto;
   font-size: 18px;
   overflow: auto;
+  min-height: 0px;
 }
 
 .containerBox .author-design {
